--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,51 @@
 html {
   scroll-behavior: smooth;
 }
+
+.navbar {
+  backdrop-filter: blur(5rem);
+  background-color: rgba(255, 255, 255, 0.616);
+}
+
+.sessions {
+  margin-top: 2rem;
+  border-radius: 12px;
+  position: relative;
+}
+
+.timeitem {
+  padding-bottom: 1.5rem;
+  border-left: 4px solid #abaaed;
+  position: relative;
+  padding-left: 20px;
+  margin-left: 10px;
+}
+
+.timeitem:last-child {
+  border: 0px;
+  padding-bottom: 0;
+}
+
+.timeitem:before {
+  content: "";
+  width: 15px;
+  height: 15px;
+  background: white;
+  border: 2px solid #4e5ed3;
+  box-shadow: 3px 3px 0px #bab5f8;
+  box-shadow: 3px 3px 0px #bab5f8;
+  border-radius: 50%;
+  position: absolute;
+  left: -10px;
+  top: 0px;
+}
+.time {
+  color: #2a2839;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+}
+p {
+  color: #4f4f4f;
+  line-height: 1.5;
+  margin-top: 0.4rem;
+}
